--- a/.env
+++ b/.env
@@ -1,23 +1,10 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=base64:zUyCqmWjZdqOy26NJKQHVKDOKfquT8LHGWo868U5/AQ=
-APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost/public
-
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
-
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-PHP_CLI_SERVER_WORKERS=4
-
-BCRYPT_ROUNDS=12
+APP_ENV=production
+APP_KEY=base64:4YaGKqrq6jX8Ovjny6pF1hmTiY8Q7OZeh5u5SySjxRk=
+APP_DEBUG=false
+APP_URL=http://localhost/cms_prueba_2
 
 LOG_CHANNEL=stack
-LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -36,32 +23,25 @@ DB_PASSWORD_WRITE=writer_pass
 DB_USERNAME_READ=reader
 DB_PASSWORD_READ=reader_pass
 
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
-
-BROADCAST_CONNECTION=log
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-
-CACHE_STORE=file
-CACHE_PREFIX=
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -71,7 +51,22 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}"
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
+
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 RECAPTCHA_SITE_KEY=6LcLsrkqAAAAAO5ImP1WuZR7kRP4Uqz83sF1n7Ri
 RECAPTCHA_SECRET_KEY=6LcLsrkqAAAAAMGq0rI3y0JwkjHUDG2q1Ef-WXfB
+
+NOCAPTCHA_SITEKEY=6LcLsrkqAAAAAO5ImP1WuZR7kRP4Uqz83sF1n7Ri
+NOCAPTCHA_SECRET=6LcLsrkqAAAAAMGq0rI3y0JwkjHUDG2q1Ef-WXfB
