--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
+        "laravel-vite-plugin": "^0.7.2",
+        "lodash": "^4.17.19",
+        "postcss": "^8.1.14",
         "sass": "^1.56.1",
-        "tailwindcss": "^3.4.13",
-        "vite": "^6.0"
+        "vite": "^4.0.0"
     }
 }
